删除无用代码，用户界面更新

--- a/DesignPattern.csproj
+++ b/DesignPattern.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessDB.cs" />
+    <Compile Include="AccessDBHelper.cs" />
     <Compile Include="ConnDatebase.cs" />
+    <Compile Include="DatabaseFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
